# SpaceInvadersOSC

./: README
oscpack/examples/: OscDump.cpp
oscpack/osc/: OscPrintReceivedElements.cpp
oscpack/tests/: OscReceiveTest.cpp  OscUnitTests.cpp
pdserver/: OSCroute.pd_linux  dumpOSC.pd_linux  invadersSoundEngine.pd  sendOSC.pd_linux
xinvaders-2.1.1/: Makefile  Makefile.am  Makefile.in  README  Vaders  acconfig.h  base.c  base1.bit  base2.bit  config.cache  config.h  config.h.in  config.status  configure  configure.in  exe  explode1.bit  explode2.bit  icon.xpm  install.ubuntu  main.c  me.h  patchlevel.h  score.c  shot.c  spacer1.bit  spacer2.bit  spacers.c  sperma1.bit  sperma2.bit  spermb1.bit  spermb2.bit  testOSC.c  vader1a1.bit  vader1a2.bit  vader1b1.bit  vader1b2.bit  vader2a1.bit  vader2a2.bit  vader2b1.bit  (+12 more)
xinvaders-2.1.1/debian/: README.Debian  changelog  changelog.upstream  control  copyright  menu  postinst  postrm  purge  rules  shlibs.local
xinvaders-2.1.1/intl/: Makefile
xinvaders-2.1.1/po/: Makefile  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  cat-id-tbl.c  es.gmo  es.po  xinvaders.pot
